# antidwyer_geant4

./: .hgignore  .hgtags  CMakeLists.txt  ChangeLog.md  CoolLaunchConfiguration  README.md  deleted strings  main.cc  test.txt
.hg/: dirstate  hgrc  undo.desc
.hg/cache/: branch2-served  hgtagsfnodes1  rbc-revs-v1  tags2-visible
.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo.backup.phaseroots
Scripts/: default.gdml  generator.py  gps.mac  init_practice.mac  result.txt
build-test/: CMakeCache.txt
buildd/: CMakeCache.txt  Makefile  cmake_install.cmake
gdml/: default.gdml  low_field_2_corsika.gdml  orbContainer.gdml  oscillator_model.gdml
gps/: GammaSource.mac  PositronAngle.txt  PositronSource.mac  Practice.mac  gammaSource.mac  gps.mac
gps/spectrum_field250_height8/: GammaAngle.txt  GammaEnergyy.txt  PositronAngle.txt  PositronEnergyy.txt
include/: DetectorConstruction.hh  EmWithoutGammaInteraction.h  GeneralParticleSource.hh  InputParser.hh  PhysicsList.hh  SensitiveDetector.hh  StackingAction.h  TrackingAction.h
mac/: init_practice.mac  init_vis.mac
output/Old/: GammaOuput.txt  GammaZCoord.txt  PositronOuput.txt  PositronZCoord.txt  ouput.txt
schema/: gdml.xsd  gdml_core.xsd  gdml_define.xsd  gdml_extensions.xsd  gdml_materials.xsd  gdml_parameterised.xsd  gdml_replicas.xsd  gdml_solids.xsd
schema/examples/: lhcbhcal.gdml  lhcbvelo.gdml  simple.gdml  (+2 more)
src/: ActionInitialization.cc  DetectorConstruction.cc  EmWithoutGammaInteraction.cpp  InputParser.cc  PhysicsList.cc  SensitiveDetector.cc  StackingAction.cpp  TrackingAction.cpp
(+135 files in other folders)
